// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Url renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      disabled={true}
      placeholder=" "
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      disabled={true}
      placeholder=" "
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kBGJNX"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX igbTSY"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX fhOWWW"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder=" "
      readOnly={true}
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder=" "
      readOnly={true}
      type="url"
      value="https://sportsbet.io"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      dir="rtl"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      dir="rtl"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-eqKtKx uXXXN"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="medium"
      type="url"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="large"
      type="url"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX iAgEXF"
        placeholder="xlarge"
        type="url"
      />
      <label
        className="sc-eqKtKx aGCUy"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX jwaXyu"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX hpzrQJ"
      placeholder="e.g. https://sportsbet.io"
      type="url"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM eLTOhr"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
